modules/security_group/devops.tf
variable "vpc_id" {}

resource "aws_security_group" "devops_security_group" {
  name        = "devops"
  description = "Security group for devops instance"
  vpc_id = "${var.vpc_id}"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.allow-access-from-krks}"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${var.allow-access-from-krks}"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${var.allow-access-from-krks}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "devops_sg_id" {
  value = "${aws_security_group.devops_security_group.id}"
}
